# pkgids

./: .gitignore  Dockerfile.sandbox  Makefile  README.md  architecture.md  config.toml  pyproject.toml
corpus/: build_all.sh
corpus/benign-clean-control/: setup.py
corpus/benign-clean-control/benign_clean_control/: __init__.py
corpus/canary-base64-blob/: setup.py
corpus/canary-base64-blob/canary_base64_blob/: __init__.py
corpus/canary-dns-exfil/: setup.py
corpus/canary-dns-exfil/canary_dns_exfil/: __init__.py
corpus/canary-env-harvest/: setup.py
corpus/canary-env-harvest/canary_env_harvest/: __init__.py
corpus/canary-http-install/: setup.py
corpus/canary-import-callback/: setup.py
corpus/canary-subprocess/: setup.py
data/: benign_samples.csv  corpus_samples.csv  malicious_samples.csv
infra/fakeinternet/: Dockerfile  responder.py
migrations/: 001_baseline_schema.sql  002_add_risk_delta.sql
pkgids/: __init__.py  advisory.py  analyze.py  bait.py  baseline.py  batch.py  capture.py  cli.py  config.py  dataset.py  diff.py  fetch.py  indicators.py  report.py  sandbox.py  sbom.py  score.py  telemetry.py  triggers.py  validate.py
pkgids.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: demo-fake.sh
tests/: conftest.py  test_advisory.py  test_analyze.py  test_bait.py  test_baseline.py  test_batch.py  test_capture.py  test_cli.py  test_dataset.py  test_diff.py  test_fetch.py  test_indicators.py  test_report.py  test_sandbox.py  test_sbom.py  test_score.py  test_telemetry.py  test_triggers.py  test_validate.py
(+3 files in other folders)
